# transport_station

./: .env.example  .gitignore  CONFIG_GUIDE.md  DOCKER_TROUBLESHOOTING.md  Makefile  README.md  README_DOCKER.md  README_SETUP.md  README_UV.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  start_backend.bat  start_backend.sh
backend/: Dockerfile  config.py  main.py  models.py  redis_client.py  s3_client.py  utils.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Header.tsx
frontend/src/components/ui/: button.tsx  card.tsx  textarea.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Access.tsx  Expired.tsx  Home.tsx  NotFound.tsx  Pickup.tsx  Transfer.tsx  UploadFile.tsx  UploadMessage.tsx
